<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Garduino</string>
    <string name="reset_button">Reset Garduino</string>
    <string name="set_time_button">Set Time</string>
    <string name="garduino_time_label">Garduino Time:</string>
    <string name="light_intensity_label">Brightness Level:</string>
    <string name="light_status_label">Light status:</string>
    <string name="darkness_label">Recent Dimness:</string>
</resources>
